--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   contacts_service: ^0.6.3
   flutter:
     sdk: flutter
+  image_picker: ^0.8.4+10
   intl: ^0.17.0
   permission_handler: ^9.2.0
   provider: ^6.0.2
