--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   image_picker: ^0.8.4+10
   intl: ^0.17.0
+  path_provider: ^2.0.9
   permission_handler: ^9.2.0
   provider: ^6.0.2
   url_launcher: ^6.0.20
